SERVER-75511 Block setFCV while performing unsharded compaction