src/mongo/db/commands/fle2_compact_cmd.cpp
@@ -43,6 +43,7 @@
 #include "mongo/db/catalog_raii.h"
 #include "mongo/db/commands.h"
 #include "mongo/db/commands/create_gen.h"
+#include "mongo/db/commands/feature_compatibility_version.h"
 #include "mongo/db/concurrency/d_concurrency.h"
 #include "mongo/db/s/sharding_state.h"
 #include "mongo/logv2/log.h"
@@ -73,6 +74,13 @@ CompactStats compactEncryptedCompactionCollection(OperationContext* opCtx,
 
     // Only allow one instance of compactStructuredEncryptionData to run at a time.
     Lock::ExclusiveLock fleCompactCommandLock(opCtx, commandMutex);
+
+    // Since this command holds an IX lock on the DB and the global lock throughout
+    // the lifetime of this operation, setFCV should not be allowed to abort the transaction
+    // performing the compaction. Otherwise, on retry, the transaction may attempt to
+    // acquire the global lock in IX mode, while setFCV is already waiting to acquire it
+    // in S mode, causing a deadlock.
+    FixedFCVRegion fixedFcv(opCtx);
 
     const auto& edcNss = request.getNamespace();
 
